# footing

./: .gitignore  Makefile  README.md
.github/workflows/: web-cd-mgmt.yml  web-cd-staging.yml  web-ci.yml
apps/agent/: Makefile  README.md  pyproject.toml  sample-inputs.json
apps/agent/footing_agent/: __init__.py  __main__.py  agent.py  llm.py  prompts.py  schema.py  validation.py
apps/agent/tests/: conftest.py  test_agent_live.py  test_llm_mock.py  test_validation.py
apps/agent/tests/fixtures/: audrey.json  paul.json
apps/web/: Dockerfile  Makefile  requirements.txt  server.py
apps/web/static/: index.html  livre.html  welcome.html
deploy/web/: Makefile
deploy/web/base/: deployment.yaml  httproute.yaml  kustomization.yaml  middleware-authentik.yaml  namespace.yaml  pvc.yaml  service.yaml
deploy/web/overlays/mgmt/: httproute-mgmt.yaml  kustomization.yaml
deploy/web/overlays/staging/: httproute-staging.yaml  kustomization.yaml
